# DoTalk

./: .dockerignore  .env.dev  .env.dev.example  .env.example  .env.prod  .env.prod.example  .gitignore  Dockerfile  Makefile  README.md  TODO  docker-compose.yaml  pyproject.toml
apps/: __init__.py  urls.py
apps/categories/: admin.py  models.py  serializers.py  urls.py  views.py
apps/categories/fixtures/: categories.json  topics.json
apps/posts/: admin.py
apps/posts/models/: __init__.py  posts.py
apps/rooms/: admin.py  consumers.py  filters.py  middleware.py  routing.py  serializers.py  urls.py  views.py
apps/rooms/fixtures/: categories.json  topics.json
apps/rooms/models/: __init__.py  categories.py  rooms.py
apps/shared/: manager.py  models.py  permissions.py
apps/shared/utils/: __init__.py  logger.py  utils.py
apps/users/: admin.py  serializers.py  tasks.py  urls.py  views.py
apps/users/models/: users.py
frontend/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  index.css
frontend/src/api/: axios.ts
frontend/src/components/: RoomCard.tsx  RoomTimer.tsx
frontend/src/hooks/: useVideoChat.ts
frontend/src/layouts/: AuthLayout.tsx  Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/pages/: AdvancedFilterPage.tsx  ChangePasswordPage.tsx  ChatsPage.tsx  EditProfilePage.tsx  ExplorePage.tsx  HomePage.tsx  LoginPage.tsx  ProfilePage.tsx  RegisterPage.tsx  (+5 more)
root/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
root/settings/: __init__.py  base.py  production.py
(+9 files in other folders)
